{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 248,
  "lineage": "7273587a-6318-fa79-1716-625338cbd518",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:806361923989:vpc/vpc-0340371df2dfb64fb",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02c905d81097cef41",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0ed6613cfe5be966e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "vpc"
                ]
              }
            ],
            "id": "vpc-0340371df2dfb64fb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09506119a1073f558",
            "owner_id": "806361923989",
            "state": "available",
            "tags": {
              "Name": "vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915551713650000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155519492000000017",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155515872200000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915551974590000001a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155516934700000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155521047400000022",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155515887300000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155521060500000023",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915551979460000001c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155520980100000020",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915551819520000000f",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155518492400000015",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_ami.ami",
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155523630100000031",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915551713720000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155518442000000012",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155515856900000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155515856900000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915552307840000002f",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915552285460000002e",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915552247380000002c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155518469500000014",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155523533400000030",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155518423000000011",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_ami.ami",
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target"
          ]
        },
        {
          "index_key": 23,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915551714270000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 24,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155521061800000024",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 25,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155515844600000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 26,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915552051200000001e",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 27,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155521657400000026",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 28,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155515858500000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami"
          ]
        },
        {
          "index_key": 29,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155520993400000021",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 30,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155521926800000027",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 31,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155519721600000019",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 32,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915552239510000002b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 33,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915552250020000002d",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami"
          ]
        },
        {
          "index_key": 34,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155519341600000016",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 35,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915551977010000001b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_ami.ami",
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target"
          ]
        },
        {
          "index_key": 36,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155521219700000025",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_ami.ami",
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target"
          ]
        },
        {
          "index_key": 37,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915551714370000000d",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 38,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155517079400000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 39,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155522322700000028",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_ami.ami",
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target"
          ]
        },
        {
          "index_key": 40,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155518454300000013",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 41,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155515728300000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 42,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155519672700000018",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami"
          ]
        },
        {
          "index_key": 43,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915552066750000001f",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_ami.ami",
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target"
          ]
        },
        {
          "index_key": 44,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155522374500000029",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 45,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-20210829155518242800000010",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 46,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915552239440000002a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami",
            "data.aws_vpc.selected"
          ]
        },
        {
          "index_key": 47,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915552009820000001d",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_ami.ami",
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target"
          ]
        },
        {
          "index_key": 48,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937-2021082915551716890000000e",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "target_id": "i-0f329cb20ab04316d"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "aws_instance.myFirstInstance",
            "aws_lb_target_group.lb_target",
            "data.aws_ami.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myFirstInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05345224afa96016a",
            "domain": "vpc",
            "id": "eipalloc-b69e7eb4",
            "instance": "i-0f329cb20ab04316d",
            "network_border_group": "us-west-1",
            "network_interface": "eni-07dd548d0cc00a20e",
            "private_dns": "ip-172-31-10-233.us-west-1.compute.internal",
            "private_ip": "172.31.10.233",
            "public_dns": "ec2-54-215-47-57.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.47.57",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nodejs_elastic_ip"
            },
            "tags_all": {
              "Name": "nodejs_elastic_ip"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.ami",
            "aws_instance.myFirstInstance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myFirstInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5860973646d08ff",
            "arn": "arn:aws:ec2:us-west-1:806361923989:instance/i-0f329cb20ab04316d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f329cb20ab04316d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tester",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07dd548d0cc00a20e",
            "private_dns": "ip-172-31-10-233.us-west-1.compute.internal",
            "private_ip": "172.31.10.233",
            "public_dns": "ec2-54-215-47-57.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.47.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01aa00de9df371a76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "my-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa5cef704feabe55",
            "tags": {
              "Name": "my-ec2-instance"
            },
            "tags_all": {
              "Name": "my-ec2-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c49dc39179882a71"
            ]
          },
          "dependencies": [
            "data.aws_ami.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:loadbalancer/app/testing-lb/3aa32269ba3c7203",
            "arn_suffix": "app/testing-lb/3aa32269ba3c7203",
            "dns_name": "testing-lb-583305641.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:loadbalancer/app/testing-lb/3aa32269ba3c7203",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "testing-lb",
            "security_groups": [
              "sg-0c49dc39179882a71"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b856cb5487573749"
              },
              {
                "subnet_id": "subnet-0fa5cef704feabe55"
              }
            ],
            "subnets": [
              "subnet-0b856cb5487573749",
              "subnet-0fa5cef704feabe55"
            ],
            "vpc_id": "vpc-0340371df2dfb64fb",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "data.aws_vpc.selected",
            "aws_security_group.security_node",
            "data.aws_subnet_ids.subnet_ids"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:listener/app/testing-lb/3aa32269ba3c7203/420a4c0d2574d2d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:listener/app/testing-lb/3aa32269ba3c7203/420a4c0d2574d2d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:loadbalancer/app/testing-lb/3aa32269ba3c7203",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.lb_target",
            "aws_security_group.security_node",
            "data.aws_subnet_ids.subnet_ids",
            "data.aws_vpc.selected",
            "aws_lb.app_load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "arn_suffix": "targetgroup/my-test-lb/d9b5a348b35b5937",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:806361923989:targetgroup/my-test-lb/d9b5a348b35b5937",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "my-test-lb",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0340371df2dfb64fb"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:806361923989:security-group/sg-0c49dc39179882a71",
            "description": "security group for nodejs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0c49dc39179882a71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-security-group",
            "name_prefix": "",
            "owner_id": "806361923989",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-security-group"
            },
            "tags_all": {
              "Name": "my-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0340371df2dfb64fb"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}